objects/Order_Item__x.object
<CustomObject>
    <externalDataSource>Online_Orders</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Discount__c</fullName>
        <externalDeveloperName>disc</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Order</label>
        <length>80</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <externalDeveloperName>productCode</externalDeveloperName>
        <label>Product</label>
        <length>80</length>
        <referenceTo>Product__x</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <externalDeveloperName>quant</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Sort Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <externalDeveloperName>price</externalDeveloperName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Item</label>
    <pluralLabel>Order Items</pluralLabel>
</CustomObject>